fix mobile spacing

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
   font-family: 'SF Pro Light', 'Helvetica Neue', sans-serif;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
   flex-direction: column;
   color: var(--color-primary);
 }
